<resources>
    <string name="app_name">SwipeLauncher</string>
    <string name="Home">Home</string>
    <string name="Donate">Donate</string>
    <string name="Settings">Settings</string>
    <string name="help">Help/callback</string>
    <string name="toEevaluation">Eevaluation</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="copySuccess">Copied successfully</string>
    <string name="myEmail">abcdsxg@gmail.com</string>
    <string name="watchVideoText">Watch Video help</string>
    <string name="watchQuestionText">See Frequently Asked Questions</string>
    <string name="evaluation">Feedback:</string>
    <string name="evaluationText">Have any comments or questions please email abcdsxg@gmail.com</string>
    <string name="copyEmailText">(Click to copy the mailAddress)</string>
    <string name="theNewVersion">Is already the newest version</string>
    <string name="updateDialogTitle">App Update</string>
    <string name="updateText">Update</string>
    <string name="nextTime">next time</string>
    <string name="checkUpdateText">check for updating</string>
    <string name="zfb">18336739503</string>
    <string name="wx">syg596913711</string>
    <string name="donateText">Donation is for me more motivated to continue to do so, donors can write the name or nickname in the remarks, you will appear in the donation list below</string>
    <string name="donatePageText">Donate List</string>
    <string name="exitText">Press again to exit the game</string>
    <string name="cancel">cancel</string>
    <string name="rootTip">Your device is not root, some features will not be available</string>
    <string name="zfb_zz">Aipay Transfers</string>
    <string name="zfb_fkm">Aipay Pay code</string>
    <string name="zfb_sys">Aipay Scan</string>
    <string name="wx_zz">Wechat Transfers </string>
    <string name="wx_sfk">Wechat Pay code</string>
    <string name="wx_sys">Wechat Scan</string>
    <string name="tabTitle">Pay/Scan</string>
    <string name="notif_title">Click to create new custom activity</string>
    <string name="notif_content">current activity:</string>
    <string name="getError">get activity info failed</string>
    <string name="editAppInfo">edit current AppInfo</string>
    <string name="customAppInfo">Custom AppInfo</string>
    <string name="inputError">The last two lines of the input format is incorrect</string>
    <string name="emptyError">There content is not input, please check!</string>
    <string name="numberError">the number of tab pages can not be greater than the current total number of Tab pages!</string>
    <string name="deleteDia_title">confirm delete？</string>
    <string name="yes">yes</string>
    <string name="permisDia_title">Ask for permission</string>
    <string name="permisDia_msg">Please allow pop permission request, otherwise the application will not work</string>
    <string name="createSucceed">Create a shortcut to success</string>
    <string name="addNewTab">Add new Tab</string>
    <string name="editTab">Edit tab name</string>
    <string name="cannotEmpty">The content can not be blank!</string>
    <string name="settingSaveSucceed">Settings saved successfully</string>
    <string name="settingSaveFail">Failed to save settings</string>
    <string name="edit">Edit</string>
    <string name="createShortcut">Create Shortcut</string>
    <string name="clickToCopyDonate">Click below ways of donate to copy</string>
    <string name="addCustom">Add Custom</string>
    <string name="notifySetting">Notification settings</string>
    <string name="showIcon">Show status bar icons</string>
    <string name="openShowClsName">Open the notification bar detection</string>
    <string name="openShwoClsNameSummay">(you must open when add a custom and close can reduction Caton)</string>
    <string name="flushTime">Notification detection of the refresh interval</string>
    <string name="saveSetting">Save Setting</string>
    <string name="finish">Commit</string>
    <string name="PackageName">PackageName:</string>
    <string name="ClassName">ClassName:</string>
    <string name="showName">Show Name:</string>
    <string name="showPos">where the positon do you want to show? </string>
    <string name="showPage">where the page num do you want to add:</string>
    <string name="delete">delete</string>
    <string name="exit">Exit</string>
    <string name="DoesnotExitError">The application does not exist and can not be started.</string>
    <string name="createShoreCutTitle">Create Shortcut</string>
    <string name="lancher_fail">Failed to start, may not support the component</string>
    <string name="position_null">No startup components are added to this location</string>
    <string name="window_permission_tip">Sliding service failed to start, please open the Hover window permission manually</string>
    <string name="input_panel_name">Please enter the name of the new panel</string>
    <string name="choose_type">Please select an add type</string>
    <string name="choose_app">Please select an application</string>
    <string name="app">application</string>
    <string name="shorcut">shortcut</string>
    <string name="set_default">Do you want to set the currently added panel as the default panel?</string>
    <string name="default_panel_text">default panel</string>
    <string name="num_format_error">The input must be a number</string>
    <string name="area_error">Range error, so set to default 20</string>
    <string name="set_bound_tip">If you do not see the red border after checking, please check whether the suspension window permission is turned on</string>
    <string name="Service">Service</string>
    <string name="NotificationBar">NotificationBar</string>
    <string name="SwipePanel">SwipePanel</string>
    <string name="defaultTime">default detection once after 1000ms</string>
    <string name="enable_touch_service">After starting, you can swipe out and select the launcher in any interface</string>
    <string name="touch_service_setting_title">start swipe service</string>
    <string name="others">Others</string>
    <string name="swipePos">swipe position</string>
    <string name="deaultSwipePos">default from upper right </string>
    <string name="chooseSwipePos">choose swipe position</string>
    <string name="distantSummary">default value is 20,you can set it  between 5 and 80</string>
    <string name="distantWidth">swipe area width</string>
    <string name="boundSummary">default bound is transparent</string>
    <string name="boundTitle">show swipe area</string>
    <string name="shock_default">default enable</string>
    <string name="shock_title">vibrating when touching</string>
    <string name="add_panel">add new swipe panel</string>
    <string name="editPanel">edit swipe panel</string>
    <string name="default_panel">default swipe panel</string>
    <string name="choose_panel">choose panel</string>
</resources>
