<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_70">

    <LinearLayout
        android:id="@+id/videoHelp"
        android:layout_width="match_parent"
        android:elevation="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/white_70"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="50dp"
            android:text="@string/watchVideoText"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:src="@mipmap/icon_right"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/white_70"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="50dp"
            android:text="@string/watchQuestionText"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:src="@mipmap/icon_right"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/checkUpdate"
        android:layout_width="match_parent"
        android:elevation="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/white_70"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="50dp"
            android:text="@string/checkUpdateText"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:src="@mipmap/icon_right"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/suggestion"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:elevation="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/white_70"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evaluation"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/evaluationText"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/copyEmailText"
            android:textSize="14sp"
            android:textColor="@color/red500"
            android:gravity="center_horizontal"
            android:paddingLeft="20dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_70"/>

</LinearLayout>